Actually fixed profile pictures stretching this time

--- a/src/page-stuff/css/profile.css
+++ b/src/page-stuff/css/profile.css
@@ -24,8 +24,10 @@ body {
 }
 
 .profile-image img {
-    width: auto;
+    position: relative;
+    width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .profile-image {
@@ -40,6 +42,7 @@ body {
     margin-left: auto;
     margin-top: 20px;
     margin-bottom: 35px;
+    object-fit: cover;
 }
 
 .volforce-display {
